spacings fix

--- a/scss/partials/_font.scss
+++ b/scss/partials/_font.scss
@@ -1,7 +1,5 @@
 $font-family: "Arial", sans-serif;
 
-$font-size: (
-  sm: 13px,
-  md: 26px,
-  lg: 32px,
-);
+$font-size-sm: 13px;
+$font-size-md: 26px;
+$font-size-lg: 36px;
