--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,5 +7,5 @@
 @import "./partials/spaziature";
 
 h1 {
-  @include titleBig($text-color, 68px, $font-family);
+  @include titleBig($text-color, $font-size-lg, $font-family);
 }
